# frame-poster

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yml  configs.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: 01.yml  02.yml  starter.yml
images/: README.md
logs/: fb_log.txt
src/: cli.py  config_models.py  config_validator.py  console.py  facebook.py  frame_utils.py  load_configs.py  logger.py  message.py  poster.py  settings.py  subtitles.py  summary.py  summary_step.py  variable_check.py  workflow.py
subtitles/: README.md
tests/: test_facebook_security.py  test_workflow.py
